# rcpsp_2020

./: AB4.txt  AB4_T100.txt  AB4_T50.txt  AB4c1.txt  AB4enc.rcpsp  Input.dzn  Output.txt  README.md  predetodzn.py  rcpsptodzn (copia).py  rcpsptodzn.py
Cplex/: cp_rcpsp.cpp
Cplex/RCPSP CPLEX/: CMakeLists.txt  README.md  build_debug.sh  build_release.sh
Cplex/RCPSP CPLEX/data/: AB4.rcpsp  AB4Out.txt  AT1.rcpsp  Ch1.rcpsp  Ej5.rcpsp
Cplex/RCPSP CPLEX/history/version1/: Makefile  main.cpp  rcpsp.cpp  rcpsp.hpp
Cplex/RCPSP CPLEX/history/version2/: Makefile  cp_rcpsp.cpp  cp_rcpsp.hpp  loader.c  loader.h  main.c
Cplex/RCPSP CPLEX/history/version3/: cp_rcpsp.cpp  main.c
Cplex/RCPSP CPLEX/history/version4/: Makefile  cp_rcpsp.cpp  cp_rcpsp.hpp  main.c  make.conf
Cplex/RCPSP CPLEX/history/version5/: main.c
Cplex/RCPSP CPLEX/include/: cp_rcpsp.hpp
Cplex/RCPSP CPLEX/src/: CMakeLists.txt  cp_rcpsp.cpp  main.cpp
c++/: firs_rcpsp.cpp
cpscheduler_old/src/: cp_rcpsp.cpp
exampledata/: AB4_T25.dzn  FINDMUS_failed_subproblem.fzn  Input.dzn  Inputprede.dzn  Inputt25.dzn  abc4todzn  abc4todzn.dzn  datos12.txt  minizinc_rcpsp_modified.dzn  prede120.txt  predetodzn.py  rcpsp_1.dzn  rcpsp_1_W.dzn  rcpsp_profit.mzn  res.dzn  res120.py  res120.txt  res120.txt.save  time_indexed_npv_rcpsp.mzn
python/: AB4_T25.txt  AB4c1.txt  ex1.py  example_cplex.py  example_python.py
